--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
 
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-5 col-xs-10 col-xxs-10 person">
-                        <img src="img/piotr1.jpg" class="img-responsive">
+                        <img src="img/Piotr_new.jpeg" class="img-responsive">
                          <h3 class="name">Piotr</h3>
                         <h6 class="function">Mentor Java</h6><i class="fas fa-user-tie ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="LEAD Mentor"></i>
-                         <p>Człowiek który pokazuje, że limity nie istnieją: zostanie wysoko cenionym specjalistą zajęło mu tylko 6 lat. Pasjonat zdalnej pracy i nauki. Od 2 lat zajmuje sie szkoleniem przyszłych programistów.
+                         <p>Człowiek który pokazuje, że limity nie istnieją: zostanie wysoko cenionym specjalistą zajęło mu tylko 6 lat. Pasjonat zdalnej pracy i nauki. Od 4 lat zajmuje sie szkoleniem przyszłych programistów.
                          </p>
                          <a target="_blank" href="https://pl.linkedin.com/in/piotr-ko%C5%82acz"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Zobacz profil mentora"></i></a>
                         <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><i class="fas ment-ico fa-calendar-alt d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Zarezerwuj spotkanie"></i></a>
