--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Proste zasady rozliczeń - płacisz tylko za odbyte konsultacje. Elastyczne formy płatności - jednorazowe konsultacje, regularne spotkania, pełny kurs programowania.</p>
+                        <p>Proste zasady rozliczeń: wpłać dowolną kwotę i wykorzystaj ją na: jednorazowe konsultacje, regularne spotkania, pełny kurs programowania.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
