--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                <div class="row">
                    <div class="col-md-1 flex-center"><i class="fas fa-globe-americas"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Nauka online - bez wychodzenia z domu, bez stania w korkach. Wybierasz mentora, rezerwujesz czas w jego kalendarzu, a o ustalonej godzinie klikasz w link i łączysz się z mentorem. </p>
+                        <p>Nauka online - bez wychodzenia z domu, bez stania w korkach. Wybierasz mentora, rezerwujesz czas w jego kalendarzu, a o ustalonej godzinie klikasz w link i rozpoczynasz lekcję. </p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-sitemap"></i></div>
