--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 
                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Proste zasady rozliczeń: wpłać dowolną kwotę i wykorzystaj ją na: jednorazowe konsultacje, regularne spotkania, pełny kurs programowania.</p>
+                        <p>Proste zasady rozliczeń: wpłać dowolną kwotę i wykorzystaj ją na: jednorazowe konsultacje, regularne spotkania, pomoc w rozwoju prywatnego projektu, przygotowanie do interview czy po prostu code review.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Wykorzystaj swoje godziny na dowolny cel - jesteśmy do Twojej dyspozycji 7 dni w tygodniu. Nauka programowania od zera, zaawansowane zagadnienia, pomoc w rozwoju prywatnego projektu, code review, wsparcie w procesie rekrutacji.</p>
+                        <p></p>
                    </div>
 
                   <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
