--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Specjalizujemy się w osobach, które znają już podstawy programowania i chcą wyróżnić się wśród innych kandydatów na pozycję Junior Developera.</p>
+                        <p>Specjalizujemy się w osobach, które znają już podstawy programowania i chcą wyróżnić się wśród innych kandydatów na pozycję Junior Developera. Z przyjemnością wspieramy absolwentów innych szkół programowania.</p>
                    </div>
 
                   <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
