--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 
                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Proste zasady rozliczeń: wpłać dowolną kwotę i wykorzystaj ją na: jednorazowe konsultacje, regularne spotkania, pomoc w rozwoju prywatnego projektu, przygotowanie do interview czy po prostu code review.</p>
+                        <p>Proste zasady rozliczeń: wpłać dowolną kwotę i wykorzystaj ją na: jednorazowe konsultacje, regularne spotkania, pomoc w rozwoju prywatnego projektu, przygotowanie wyróżniającego się CV, przygotowanie do interview czy po prostu code review.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="far fa-clock"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Specjalizujemy się w osobach, które znają już podstawy programowania i chcą wyróżnić się wśród innych kandydatów na pozycję Junior Developera. Z przyjemnością wspieramy absolwentów innych szkół programowania.</p>
+                        <p>Specjalizujemy się w osobach, które znają już podstawy programowania i chcą wyróżnić się wśród innych kandydatów na pozycję Junior Developera. Z przyjemnością wspieramy absolwentów innych szkół programowania w drodze po pierwszą pracę.</p>
                    </div>
 
                   <div class="col-md-1 flex-center"><i class="far fa-handshake"></i></div>
