--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                    <div class="col-md-1 flex-center"><i class="fas fa-sitemap"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Unikatowa formuła kursu. Programowanie to nie tylko Java, uczymy też podstaw Angulara, HTMLa, Springa, Hibernate'a, Dockera, Selenium, GITa, AWSa i Jenkinsa. Z nami napiszesz kompletny projekt składający się z backendu, frontendu, testów akceptacyjnych i deploymentu. </p>
+                        <p>Unikatowa formuła nauki. Programowanie to nie tylko Java, uczymy też podstaw Angulara, HTMLa, Springa, Hibernate'a, Dockera, Selenium, GITa, AWSa i Jenkinsa. Z nami napiszesz kompletny projekt składający się z backendu, frontendu, testów akceptacyjnych i deploymentu.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
