--- a/index.html
+++ b/index.html
@@ -58,11 +58,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">KONTAKT</a>
                     </li>
-<!--
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://programming-in-practice.github.io/">BLOG</a>
-                    </li>
--->
                 </ul>
             </div>
         </nav>
@@ -106,7 +101,7 @@
                         <p>Unikatowa formuła kursu. Programowanie to nie tylko Java, uczymy też podstaw Angulara, HTMLa, Springa, Hibernate'a, Dockera, Selenium, GITa, AWSa i Jenkinsa. Z nami napiszesz kompletny projekt składający się z backendu, frontendu, testów akceptacyjnych i deploymentu.</p>
                    </div>
                    
-                   <div class="col-md-1 flex-center"><i class="fas fa-sitemap"></i></div>
+                   <div class="col-md-1 flex-center"><i class="fas fa-users-cog"></i></div>
                    <div class="col-md-11 flex-center">
                         <p>Środowisko pracy idealnie symulujące pracę programisty - dołącz do zespołu i współtwórz aplikację do zarządzania finansami. Ponad 2 lata aktywnego rozwoju, setki commitów, dziesiątki deweloperów i produkcyjna jakość. Chcesz poznać szczegóły? Zapraszamy na nasz profil na <a href="https://github.com/passionate-software-engineer/personal-finance-manager" target="_blank">Github'ie.</a></p>
                    </div>
