--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <img src="img/Piotr_new.jpeg" class="img-responsive">
                          <h3 class="name">Piotr</h3>
                         <h6 class="function">Mentor Java</h6><i class="fas fa-user-tie ment-ico2 d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="LEAD Mentor"></i>
-                         <p>Człowiek który pokazuje, że limity nie istnieją: zostanie wysoko cenionym specjalistą zajęło mu tylko 6 lat. Pasjonat zdalnej pracy i nauki. Od 4 lat zajmuje sie szkoleniem przyszłych programistów.
+                         <p>Człowiek który pokazuje, że limity nie istnieją: zostanie wysoko cenionym specjalistą zajęło mu tylko 6 lat. Pasjonat zdalnej pracy i nauki. Od 4 lat szkoli przyszłych programistów.
                          </p>
                          <a target="_blank" href="https://pl.linkedin.com/in/piotr-ko%C5%82acz"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Zobacz profil mentora"></i></a>
                         <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><i class="fas ment-ico fa-calendar-alt d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Zarezerwuj spotkanie"></i></a>
@@ -204,7 +204,7 @@
                         <h3 class="name">Sebastian</h3>
                         <h6 class="function">Mentor Java</h6>
                         <i class="fas fa-user-graduate ment-ico3 d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="top" title="JUNIOR Mentor"></i>
-                        <p>Kiedyś zawodowy gracz w pokera, dzisiaj postanowił zostać programistą - jeden z najbardziej ambitnych uczestników kursów Piotra. Zaraz po kursie dostał pracę w jednej z najlepszych firm w kraju.
+                        <p>Niegdyś jeden z najbardziej ambitnych uczestników kursów Piotra. Dzisiaj robi karierę w jednej z najlepszych firm w kraju i wspiera kursantów swoim świeżym spojrzeniem.
                         </p>
                         <a target="_blank" href="https://www.linkedin.com/in/sebastian-pacuk/"><i class="fab fa-linkedin-in ment-ico d-inline-block" tabindex="0" data-toggle="tooltip" data-placement="bottom" title="Zobacz profil mentora"></i></a>
                         <a target="_blank" href="https://calendly.com/spacuk/konsultacje"><i class="fas fa-calendar-alt ment-ico d-inline-block" tabindex="0" data-toggle="tooltip"   data-placement="top" title="Zarezerwuj spotkanie"></i></a>
