--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
             <p>Dopiero zaczynasz naukę programowania i nie wiesz, co Cię czeka? Zacznij od jednego z naszych <span class="bold">Senior Mentorów</span> - pomogą opanować Ci podstawy programowania, a w twojej kieszeni zostanie sporo oszczędności na dalszą naukę. <span class="bold">Senior</span> poprowadzi Cię za rękę i rozwiąże Twoje problemy.</p>
 
-            <p><span class="bold">Lead</span> - świetny wybór jeżeli zależy Ci na kompleksowej nauce - razem możecie ułożyć plan nauki i realizować go przez kolejne miesiące. Ta kategoria mentorów to świetny wybór jeśli chesz zbudować swoje portfolio, napisać bardziej zaawansowany projekt czy przygotować się do interview. Metoda krótkich odpowiedzi sprawdza sie tutaj najlepiej - jeżeli jesteś bardzo zmotywowany i chcesz nauczyć się więcej niż inni - wybierz naszego <span class="bold">Lead’a</span> ;) </p>
+            <p><span class="bold">Lead</span> - świetny wybór jeżeli zależy Ci na kompleksowej nauce - razem możecie ułożyć plan nauki i realizować go przez kolejne miesiące. Ta kategoria mentorów to świetny wybór jeśli chesz zbudować swoje portfolio, napisać bardziej zaawansowany projekt czy przygotować się do interview. Metoda krótkich podpowiedzi sprawdza sie tutaj najlepiej - jeżeli jesteś bardzo zmotywowany i chcesz nauczyć się więcej niż inni - wybierz naszego <span class="bold">Lead’a</span> ;) </p>
 
             <p>Jeżeli zależy Ci na kompleksowej nauce i chcesz spędzić z nami kilka miesięcy, to polecamy <span class="bold">rozwiązanie hybrydowe</span>. Wybierz Lead mentora, który stworzy dla Ciebie indywidualny plan nauki, a na codzień korzystaj z pomocy Seniora, który pozwoli Ci zrealizować ambitne cele postawione przez naszego eksperta.</p>
 
