--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
             <p>Jeżeli zależy Ci na kompleksowej nauce i chcesz spędzić z nami kilka miesięcy, to polecamy <span class="bold">rozwiązanie hybrydowe</span>. Wybierz Lead mentora, który stworzy dla Ciebie indywidualny plan nauki, a na codzień korzystaj z pomocy Seniora, który pozwoli Ci zrealizować ambitne cele postawione przez naszego eksperta.</p>
 
-            <p>Dlaczego nie mamy w ofercie <span class="bold">Junior Mentora</span>? Doświadczenie pokazało, że mimo pozornych oszczędności w cenie zajęć ta opcja się nie sprawdza gdyż <span class="bold">Senior Mentor</span> tą samą wiedzę przekaże znacznie szybciej i sprawniej.</p>
+<!--             <p>Dlaczego nie mamy w ofercie <span class="bold">Junior Mentora</span>? Doświadczenie pokazało, że mimo pozornych oszczędności w cenie zajęć ta opcja się nie sprawdza gdyż <span class="bold">Senior Mentor</span> tą samą wiedzę przekaże znacznie szybciej i sprawniej.</p> -->
 
         </div>
 
