--- a/index.html
+++ b/index.html
@@ -227,28 +227,26 @@
             </div>
 
             <div class="col-xs-12 col-sm-12 col-md-12 level-icons">
-               <!-- <div class="level-junior">
+                <div class="level-junior">
                     <i class="fas fa-user-graduate"></i>
                     <span class="level-span">Junior</span>
-                </div> -->
-                <div class="level-senior">
+                </div>
+<!--                 <div class="level-senior">
                     <i class="fas fa-user-secret"></i>
                     <span class="level-span">Senior</span>
-                </div>
+                </div> -->
                 <div class="level-lead">
                     <i class="fas fa-user-tie"></i>
-                    <span class="level-span">Lead</span>
+                    <span class="level-span">Senior</span>
                 </div>
             </div>
         </div>
 
         <div class="mentors-description">
 
-            <!--<p><span class="bold">Junior</span> - niedawno zaczynał i dzięki temu doskonale wie przez co przechodzisz - świetny towarzysz na początku Twojej przygody z programowaniem.</p>-->
+            <p><span class="bold">Junior</span> - kilka lat doświadczenia, pracował w wielu projektach, wie co ważne by tworzyć dobrej jakości aplikacje, ma doświadczenie w nauczaniu programowania, a do tego nie tak dawno zaczynał i dzięki temu doskonale wie przez co przechodzisz.</p>
 
-            <p><span class="bold">Senior</span> - kilka lat doświadczenia, pracował w wielu firmach i projektach, wie co ważne by tworzyć dobrej jakości aplikacje, ma doświadczenie w nauczaniu programowania. </p>
-
-            <p><span class="bold">Lead</span> - wiele lat doświadczenia, zajmuje leaderskie stanowiska w firmach, potrafi prowadzić zespoły, prowadził kursy programowania, prowadził wiele procesów rekrutacyjnych, świetna osoba kiedy chcecie rozwiązać naprawdę trudny problem, doskonale wie co zrobić aby być jednym z najlepiej opłacanych programistów.</p>
+            <p><span class="bold">Senior</span> - wiele lat doświadczenia, zajmuje leaderskie stanowiska w firmach, potrafi prowadzić zespoły, prowadzi kursy programowania, prowadził wiele procesów rekrutacyjnych, świetna osoba kiedy chcesz rozwiązać naprawdę trudny problem, doskonale wie co zrobić aby być jednym z najlepiej opłacanych programistów w kraju.</p>
 
             <h3>Którego mentora wybrać?</h3>
 
