--- a/index.html
+++ b/index.html
@@ -574,14 +574,16 @@ znajdą Państwo w <a target="_blank" href="https://drive.google.com/open?id=1xu
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        js.src = 'https://connect.facebook.net/pl_PL/sdk/xfbml.customerchat.js';
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));</script>
 
       <!-- Your customer chat code -->
       <div class="fb-customerchat"
         attribution=setup_tool
-        page_id="277115582952493">
+        page_id="277115582952493"
+           logged_in_greeting="Witaj! Jak możemy Ci pomóc?"
+           logged_out_greeting="Witaj! Jak możemy Ci pomóc?">
       </div>
                     
                 </div>
@@ -590,7 +592,7 @@ znajdą Państwo w <a target="_blank" href="https://drive.google.com/open?id=1xu
 
 
     <footer>
-        <h3>Copyright &copy; 2019 Nauka programowania na godziny</h3>
+        <h3>Copyright &copy; 2017-2020 Passionate Software Engineer</h3>
     </footer>
 
 
