--- a/index.html
+++ b/index.html
@@ -248,14 +248,14 @@
 
             <p><span class="bold">Senior</span> - wiele lat doświadczenia, zajmuje leaderskie stanowiska w firmach, potrafi prowadzić zespoły, prowadzi kursy programowania, prowadził wiele procesów rekrutacyjnych, świetna osoba kiedy chcesz rozwiązać naprawdę trudny problem, doskonale wie co zrobić aby być jednym z najlepiej opłacanych programistów w kraju.</p>
 
-            <h3>Którego mentora wybrać?</h3>
+<!--             <h3>Którego mentora wybrać?</h3>
 
             <p>Dopiero zaczynasz naukę programowania i nie wiesz, co Cię czeka? Zacznij od jednego z naszych <span class="bold">Senior Mentorów</span> - pomogą opanować Ci podstawy programowania, a w twojej kieszeni zostanie sporo oszczędności na dalszą naukę. <span class="bold">Senior</span> poprowadzi Cię za rękę i rozwiąże Twoje problemy.</p>
 
             <p><span class="bold">Lead</span> - świetny wybór jeżeli zależy Ci na kompleksowej nauce - razem możecie ułożyć plan nauki i realizować go przez kolejne miesiące. Ta kategoria mentorów to świetny wybór jeśli chesz zbudować swoje portfolio, napisać bardziej zaawansowany projekt czy przygotować się do interview. Metoda krótkich podpowiedzi sprawdza sie tutaj najlepiej - jeżeli jesteś bardzo zmotywowany i chcesz nauczyć się więcej niż inni - wybierz naszego <span class="bold">Lead’a</span>. </p>
 
             <p>Jeżeli zależy Ci na kompleksowej nauce i chcesz spędzić z nami kilka miesięcy, to polecamy <span class="bold">rozwiązanie hybrydowe</span>. Wybierz Lead mentora, który stworzy dla Ciebie indywidualny plan nauki, a na codzień korzystaj z pomocy Seniora, który pozwoli Ci zrealizować ambitne cele postawione przez naszego eksperta.</p>
-
+ -->
 <!--             <p>Dlaczego nie mamy w ofercie <span class="bold">Junior Mentora</span>? Doświadczenie pokazało, że mimo pozornych oszczędności w cenie zajęć ta opcja się nie sprawdza gdyż <span class="bold">Senior Mentor</span> tą samą wiedzę przekaże znacznie szybciej i sprawniej.</p> -->
 
         </div>
