--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mentors-topic">
                 <h2>MENTORZY</h2>
-                <h6>nasz zespół mentorów</h6>
+<!--                 <h6>nasz zespół mentorów</h6> -->
             </div>
 
             <div class="mentor col-lg-12 col-md-12 col-sm-12 col-xs-12">
