--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Nauka programowania na godziny</title>
+    <title>Passionate Software Engineer</title>
 
     <meta name="description" content="Nauka programowania dla początkujacych i zaawansowanych.">
     <meta name="keywords" content="Java, kurs programowania, szkoła IT, nauka programowania">
@@ -417,27 +417,27 @@
                   <thead>
                       <tr>
                           <th></th>
-                          <!--<th>Junior</th>-->
-                          <!--<th>Senior</th> -->
-                          <th>Lead</th>
+                          <th>Junior</th>
+                          <th>Senior</th>
+<!--                           <th>Lead</th> -->
                           <th></th>
                       </tr>
                   </thead>
                   <tbody>
                       <tr>
-                          <td>1 godzina</td>
-                          <!--<td>120 zł</td> -->
-                          <td>123 zł</td>
+<!--                           <td>1 godzina</td> -->
+                          <td>90 zł / h</td>
+                          <td>125 zł / h</td>
                           <td></td>
                       </tr>            
                   </tbody>
               </table>
 
-                <p> Nie musisz decydować od razu, wpłać dowolną kwotę i zmieniaj mentorów w zależności od potrzeb. </p>
+                <p> Nie musisz decydować od razu, wpłać dowolną kwotę i wybieraj mentorów w zależności od potrzeb. </p>
 
                 <p> Dlaczego tak drogo? Nie jest drogo - <span class="bold">to najtańsza oferta na rynku</span>. Pamiętaj, że płacisz za czas spędzony z mentorem 1 na 1. Inne szkoły programowania oferują maksymalnie 1,5 godziny takiego wsparcia na tydzień, a ceny kursów zaczynają się od 10 000 zł. </p>
 
-                <p> Chciałbyś <span class="bold">rabat</span> nawet <span class="bold">25%</span>? Nic prostszego - wykonuj zadania i zbieraj punkty - czym więcej punktów zdobędziesz tym tańsza będzie Twoja nauka! </p>
+<!--                 <p> Chciałbyś <span class="bold">rabat</span> nawet <span class="bold">25%</span>? Nic prostszego - wykonuj zadania i zbieraj punkty - czym więcej punktów zdobędziesz tym tańsza będzie Twoja nauka! </p> -->
                     
                 <p>Wybór należy do Ciebie: jeżeli preferujesz naukę w toku indywidualnym, to zapraszamy do współpracy, jeżeli wolisz uczyć się w grupie, to zapraszamy do konkurencji ;)</p>
             </div>
