--- a/index.html
+++ b/index.html
@@ -416,19 +416,19 @@
               <table class="table table-hover table-price">
                   <thead>
                       <tr>
-                          <th></th>
+<!--                           <th></th> -->
                           <th>Junior</th>
                           <th>Senior</th>
 <!--                           <th>Lead</th> -->
-                          <th></th>
+<!--                           <th></th> -->
                       </tr>
                   </thead>
                   <tbody>
                       <tr>
 <!--                           <td>1 godzina</td> -->
-                          <td>90 zł / h</td>
-                          <td>125 zł / h</td>
-                          <td></td>
+                          <td>90 zł / 60 min</td>
+                          <td>125 zł / 60 min</td>
+<!--                           <td></td> -->
                       </tr>            
                   </tbody>
               </table>
