--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
     <div class="row container-fluid">
         <div class="col-md-12 flex-center">
              <div class="row container-box">
-               <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+<!--                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                    <div><i class="fas fa-cubes"></i></div>
                    <div>kompletny kurs programowania</div>
-                </div>
+                </div> -->
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-users-cog"></i></div>
                     <div>udział w profesjonalnym projekcie</div>
