--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                    
                    <div class="col-md-1 flex-center"><i class="fas fa-users-cog"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Środowisko pracy idealnie symulujące pracę programisty - dołącz do zespołu i współtwórz aplikację do zarządzania finansami. Ponad 2 lata aktywnego rozwoju, setki commitów, dziesiątki deweloperów i produkcyjna jakość. Chcesz poznać szczegóły? Zapraszamy na nasz profil na <a href="https://github.com/passionate-software-engineer/personal-finance-manager" target="_blank">Github'ie.</a> oraz aplikacji dostępnej pod adresem: <a href="pfm.passionatesoftwareengineer.com" target="_blank">PFM.PassionateSoftwareEngineer.com</a></p>
+                        <p>Środowisko pracy idealnie symulujące pracę programisty - dołącz do zespołu i współtwórz aplikację do zarządzania finansami. Ponad 2 lata aktywnego rozwoju, setki commitów, dziesiątki deweloperów i produkcyjna jakość. Chcesz poznać szczegóły? Zapraszamy na nasz profil na <a href="https://github.com/passionate-software-engineer/personal-finance-manager" target="_blank">Github'ie.</a> oraz aplikacji dostępnej pod adresem: <a href="https://pfm.passionatesoftwareengineer.com" target="_blank">pfm.PassionateSoftwareEngineer.com</a></p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
@@ -137,19 +137,19 @@
     <div class="row container-fluid">
         <div class="col-md-12 flex-center">
              <div class="row container-box">
-<!--                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
+               <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                    <div><i class="fas fa-cubes"></i></div>
                    <div>kompletny kurs programowania</div>
-                </div> -->
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-users-cog"></i></div>
                     <div>udział w profesjonalnym projekcie</div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-drafting-compass"></i></div>
                     <div>rozwój własnego projektu</div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-cogs"></i></div>
                     <div>pomoc w znalezieniu pracy</div>
                 </div>
