--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-xxs-12 address-description">
 
-                            <h4><span class="bold">Nauka programowania na godziny</span></h4>
+<!--                             <h4><span class="bold">Nauka programowania na godziny</span></h4> -->
 
                             <p class="fa-a"><i class="fas fa-mobile-alt"></i>
                             <a href="tel:+48531840545" class="fa-a phone" >+48 531-840-545</a></p>
