--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                     <div><i class="fas fa-cogs"></i></div>
-                    <div>pomoc w znalezieniu pracy</div>
+                    <div>pomoc w zdobyciu pracy</div>
                 </div>
             </div>
         </div>
