--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                    
                    <div class="col-md-1 flex-center"><i class="fas fa-users-cog"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Środowisko pracy idealnie symulujące pracę programisty - dołącz do zespołu i współtwórz aplikację do zarządzania finansami. Ponad 2 lata aktywnego rozwoju, setki commitów, dziesiątki deweloperów i produkcyjna jakość. Chcesz poznać szczegóły? Zapraszamy na nasz profil na <a href="https://github.com/passionate-software-engineer/personal-finance-manager" target="_blank">Github</a>'ie oraz produkcyjnej wersji aplikacji dostępnej <a href="https://pfm.passionatesoftwareengineer.com" target="_blank">tutaj</a></p>.
+                        <p>Środowisko pracy idealnie symulujące pracę programisty - dołącz do zespołu i współtwórz aplikację do zarządzania finansami. Ponad 2 lata aktywnego rozwoju, setki commitów, dziesiątki deweloperów i produkcyjna jakość. Chcesz poznać szczegóły? Zapraszamy na nasz profil na <a href="https://github.com/passionate-software-engineer/personal-finance-manager" target="_blank">Github</a>'ie oraz produkcyjnej wersji aplikacji dostępnej <a href="https://pfm.passionatesoftwareengineer.com" target="_blank">tutaj</a>.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
