--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="#home">START</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#learn">JAK UCZYMY</a>
+                        <a class="nav-link" href="#learn">O NAS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#mentors">MENTORZY</a>
@@ -85,8 +85,8 @@
 
         <div class="row learn-box">
             <div class="col-md-12 learn-topic">
-                <h2>JAK UCZYMY</h2>
-                <h6>co nas wyróżnia na tle konkurencji</h6>
+                <h2>O NAS</h2>
+<!--                 <h6>co nas wyróżnia na tle konkurencji</h6> -->
             </div>
 
             <div class="col-md-12 learn-description">
@@ -290,7 +290,7 @@
                 Czy każdy może zostać programistą?
                 </h4>
 
-                <p>Tak, każdy kto jest gotowy poświecić cały swoj wolny czas aby podjąć wyzwanie ma szanse zostać programistą. Dla każdego czas nauki będzie inny i zależy od aktualnych umiejętności i zaangażowania w naukę. U każdego proces nauki przebiega inaczej, dlatego oferujemy unikatowy system, gdzie sam decydujesz jak intensywnie się uczysz, jak wiele chesz wydać na nauke i ile wsparcia oczekujesz.</p>
+                <p>Tak, każdy kto jest gotowy poświecić cały swój wolny czas aby podjąć wyzwanie ma szanse zostać programistą. Dla każdego czas nauki będzie inny i zależy od aktualnych umiejętności i zaangażowania w naukę. U każdego proces nauki przebiega inaczej, dlatego oferujemy unikatowy system, gdzie sam decydujesz jak intensywnie się uczysz, jak wiele chesz wydać na nauke i ile wsparcia oczekujesz.</p>
 
                 <p>Czy trzeba być matematycznym ekspertem? Nie nie trzeba. Na studiach informatycznych matematyka to często zmarnowany czas.</p>
 
