--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 
                 <p>Indywidualne podejście - dla każdego kursanta ustalamy indywidualny tok nauki na podstawie jego aktualnej wiedzy i tego co chce osiągnąć.</p>
 
-                <p>Stawiamy na sprawdzonych mentorów. Wszyscy się znamy, napisaliśmy razem wiele projektów i wiemy czego od siebie oczekiwać. Każdy mentor udziela się w sieci i tworzy nowe materiały edukacyjne.</p>
+                <p>Stawiamy na sprawdzonych mentorów. Wszyscy się znamy, napisaliśmy razem wiele projektów i wiemy czego od siebie oczekiwać.</p>
 
                 <p>Pracujemy bezpośrednio z kursantami, nie znajdziesz u nas biura, sekretarki, specjalisty od PR czy agresywnego marketingu. Wierzymy, że jeżeli ktoś chce zostać programistą to sam do nas trafi - jesteśmy aktywni w sieci i tworzymy darmowe treści, które pomagają Wam w procesie nauki. Napisz do nas a odpisze Ci prawdziwy mentor a nie młodszy specjalista do kontaktu z kursantami :)</p>
 
