--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
                 <p>Stawiamy na sprawdzonych mentorów. Wszyscy się znamy, napisaliśmy razem wiele projektów i wiemy czego od siebie oczekiwać.</p>
 
-                <p>Pracujemy bezpośrednio z kursantami, nie znajdziesz u nas biura, sekretarki, specjalisty od PR czy agresywnego marketingu. Wierzymy, że jeżeli ktoś chce zostać programistą to sam do nas trafi - jesteśmy aktywni w sieci i tworzymy darmowe treści, które pomagają Wam w procesie nauki. Napisz do nas a odpisze Ci prawdziwy mentor a nie młodszy specjalista do kontaktu z kursantami :)</p>
+                <p>Pracujemy bezpośrednio z kursantami, nie znajdziesz u nas biura, sekretarki, specjalisty od PR czy agresywnego marketingu. Wierzymy, że jeżeli ktoś chce zostać programistą to sam do nas trafi - jesteśmy aktywni w sieci i tworzymy darmowe treści, które pomagają Wam w procesie nauki. Napisz do nas a odpisze Ci programista a nie młodszy specjalista do spraw kontaktu z kursantami :)</p>
 
                 <p>Nie kupujesz kota w worku. Mentorów możesz wypróbować zanim zapłacisz, materiały udostępniamy publicznie a w przypadku gdy nie będziesz zadowolony z naszego wsparcia po prostu zwrócimy Ci pieniądze</p>
             </div>
