--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
                 <p>Niestety zostanie programistą nie jest takie proste jak obiecuje konkurencja. Każdy z nas pracuje w tym zawodzie i doskonale wie ile wysiłku wymaga wkroczenie w jego kręgi.</p>
 
-                <p>Zostanie programistą porównujemy do zdobycia Mount Everest - firmy obiecują, że każdy może zdobyć tą górę - wystarczy zapłacić za taką możliwość i trenować aby nasza kondycja i umiejętności pozwoliły nam zdobyć szczyt. Czy można to wszystko osiągnąć w 6 miesięcy? Tak można. Czy każdy po 6 miesiącach przygotowań zdobędzie szczyt? Niestety nie.</p>
+                <p>Zostanie programistą porównujemy do zdobycia Mount Everest - firmy obiecują, że każdy może zdobyć tę górę - wystarczy zapłacić za taką możliwość i trenować aby nasza kondycja i umiejętności pozwoliły nam zdobyć szczyt. Czy można to wszystko osiągnąć w 6 miesięcy? Tak można. Czy każdy po 6 miesiącach przygotowań zdobędzie szczyt? Niestety nie.</p>
 
                 <p>Inna świetna analogia to przebiegnięcie maratonu. Każdy to może zrobić ale nie każdy jest gotowy by podporządkować temu celowi swoje życie. W maratonie najtrudniejsze są treningi - kilkadziesiąt kilometrów co tydzień przez co najmniej pół roku. Aby przebiec maraton trzeba wybiegać swoje kilometry i nie ma drogi na skróty.</p>
             </div>
