--- a/index.html
+++ b/index.html
@@ -341,14 +341,14 @@
             <div class="faq-box col-lg-4 col-md-6 col-sm-12 col-xs-12">
                 <h4>
                 <i class="far fa-clock"></i>
-                Ile godzin potrzebuję? Który pakiet wybrać?
+                Ile będzie kosztować moja nauka?
                 </h4>
 
                 <p>Nie ma jednoznacznej odpowiedzi - każdy potrzebuje innej ilości wsparcia. </p>
 
                 <p>Zacznij od drobnej wpłaty 200-300 zł, wypróbuj nasze wsparcie i złóż kolejne zamówienie.</p>
 
-                <p>Sprawdzony model to 1,5 godziny wsparcia tygodniowo, co daje 6h miesięcznie. Jeżeli zabraknie to możesz po prostu dopłacić dodatkowe środki.</p>
+                <p>Sprawdzony model to 1,5 godziny wsparcia tygodniowo, co daje 6h miesięcznie - ok 500 zł. Jeżeli zabraknie to możesz po prostu dopłacić dodatkowe środki.</p>
 
                 <p>Pamiętaj: nie płacisz za kurs z góry - zamówienia są składane na dany miesiąc kalendarzowy - jak zostaną Ci środki to na koniec miesiąca je zwrócimy.</p>
             </div>
