--- a/index.html
+++ b/index.html
@@ -359,11 +359,11 @@
                 Jak się z Wami skontaktować?
                 </h4>
 
-                <p>Najprościej dołącz do naszej społeczności na <a target="_blank" alt="Link do Slack'a" href="https://join.slack.com/t/passionate-engineer/shared_invite/enQtNTk2OTU5NTE0NjEwLTJiMWU1NTBjMmM5ZWMwODJjNWQ4YjFlMTY5NGM3MTJjNjFhMTQwM2Q3ODQ5MDUwYTkzMzc1YTIxODE4OWU5Zjc"><span class="bold">Slack'u</span></a> i na czacie porozmawiaj z mentorem i innymi uczestnikami kursów.</p>
+                <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"> fanpage na Facebook'u</a> lub <a target="_blank" href="https://join.skype.com/invite/kBAuLINHgkiA" class="fa-a">Skype</a> i na czacie porozmawiaj bezpośrednio z mentorem.</p>
 
                 <p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, <a href="tel:+48531840545"><span class="bold">zadzwonić</span></a> do nas lub napisać <a href="mailto:piotr@passionatesoftwareengineer.com"><span class="bold">maila</span></a>. W każdym przypadku odpisze Ci bezpośrednio mentor! </p>
 
-                <p>Masz wiele pytań? Od razu umów się na spotkanie z mentorem. Najedź na zdjęcie mentora i kliknij na "zarezerwuj spotkanie". Za pierwsze spotkanie nic nie płacisz. </p>
+                <p>Masz wiele pytań? Od razu umów się na <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje">spotkanie z mentorem</a>. Za pierwsze spotkanie nic nie płacisz. </p>
 
             </div>
 
