--- a/index.html
+++ b/index.html
@@ -359,11 +359,11 @@
                 Jak się z Wami skontaktować?
                 </h4>
 
-                <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"> fanpage na Facebook'u</a> lub <a target="_blank" href="https://join.skype.com/invite/kBAuLINHgkiA" class="fa-a">Skype</a> i na czacie porozmawiaj bezpośrednio z mentorem.</p>
+                <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"><span class="bold"> fanpage na Facebook'u</span></a> lub <a target="_blank" href="https://join.skype.com/invite/kBAuLINHgkiA" class="fa-a"><span class="bold">Skype</span></a> i na czacie porozmawiaj bezpośrednio z mentorem.</p>
 
                 <p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, <a href="tel:+48531840545"><span class="bold">zadzwonić</span></a> do nas lub napisać <a href="mailto:piotr@passionatesoftwareengineer.com"><span class="bold">maila</span></a>. W każdym przypadku odpisze Ci bezpośrednio mentor! </p>
 
-                <p>Masz wiele pytań? Od razu umów się na <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje">spotkanie z mentorem</a>. Za pierwsze spotkanie nic nie płacisz. </p>
+                <p>Masz wiele pytań? Od razu umów się na <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><span class="bold">spotkanie z mentorem</span></a>. Za pierwsze spotkanie nic nie płacisz. </p>
 
             </div>
 
