--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 Jak się z Wami skontaktować?
                 </h4>
 
-                <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"><span class="bold"> fanpage na Facebook'u</span></a> i na czacie porozmawiaj bezpośrednio z mentorem.</p>
+                <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"><span class="bold"> fanpage na Facebook'u</span></a> lub użyj ikonki Messenger'a w prawym dolnym rogu strony i na czacie porozmawiaj bezpośrednio z mentorem.</p>
 
                 <p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, <a href="tel:+48531840545"><span class="bold">zadzwonić</span></a> do nas lub napisać <a href="mailto:piotr@passionatesoftwareengineer.com"><span class="bold">maila</span></a>. W każdym przypadku odpisze Ci bezpośrednio mentor! </p>
 
