--- a/index.html
+++ b/index.html
@@ -277,8 +277,9 @@
     <section class="faq container-fluid">
 
         <div class="faq-topic">
-                <h2>CZY NAUKA PROGRAMOWANIA NA GODZINY JEST DLA MNIE?</h2>
-                <h6>odpowiedzi na najbardziej nurtujące pytania</h6>
+<!--                 <h2>CZY NAUKA PROGRAMOWANIA NA GODZINY JEST DLA MNIE?</h2> -->
+<!--                 <h6>odpowiedzi na najbardziej nurtujące pytania</h6> -->
+            <h2>ODPOWIEDZI NA NAJBARDZIEJ NURTUJĄCE WAS PYTANIA</h2>
         </div>
 
 
