--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
                 <div class="col-md-12 col-sm-12 col-xs-12 col-xxs-12 contact-topic">
                     <h2>KONTAKT</h2>
-                    <h6>jeżeli masz pytania, to zadzwoń lub napisz do nas</h6>
+                    <h6>Masz pytania? Zadzwoń lub napisz do nas.</h6>
                 </div>
 
                 <div class="address col-md-12 col-sm-12 col-xs-12 col-xxs-12">
