--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122684120-1"></script>
+    <script async src="https://www.google.com/recaptcha/api.js" defer></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -550,6 +551,9 @@ znajdą Państwo w <a target="_blank" href="https://drive.google.com/open?id=1xu
    
                          <input type="hidden" id="form_identifier" name="form_identifier" value="CONTACT_FORM">
 
+                        <div class="g-recaptcha" data-sitekey="6Lek5s4ZAAAAAPS9sspS1E02Me4OloUus2sr_5PN"></div>
+                        <br/>
+                        
                         <div class="form-row"><br/>
                             <button type="submit" class="submit-btn">Wyślij</button>
                         </div>
