--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@ znajdą Państwo w <a target="_blank" href="https://drive.google.com/open?id=1xu
                         <br/>
                         
                         <div class="form-row"><br/>
-                            <button type="submit" class="submit-btn">Wyślij</button>
+<!--                             <button type="submit" class="submit-btn">Wyślij</button> -->
                         </div>
                     </form>
                     <div id="form_footer"></div>
