--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
                     <div id="form"></div>
                         <div id="form_header"></div>
-                    <form class="form col-lg-6 col-md-6 col-sm-12 col-xs-12 col-xxs-12" id="gform" method="post" action="https://script.google.com/macros/s/AKfycbzMukfN2nW6VxC44B6JboZz8ORsb4mQM3BE9BR2PsG4XqAPMKsu/exec">
+                    <form class="form col-lg-6 col-md-6 col-sm-12 col-xs-12 col-xxs-12" id="gform" method="post" action="https://script.google.com/a/passionatesoftwareengineer.com/macros/s/AKfycbyR_hLLR0I03G5S9KHxQf6v2vqDLR-6JnTPOCIp3g/exec">
 
                         <div id="blackout"></div>
                         
@@ -555,7 +555,7 @@ znajdą Państwo w <a target="_blank" href="https://drive.google.com/open?id=1xu
                         <br/>
                         
                         <div class="form-row"><br/>
-<!--                             <button type="submit" class="submit-btn">Wyślij</button> -->
+                            <button type="submit" class="submit-btn">Wyślij</button>
                         </div>
                     </form>
                     <div id="form_footer"></div>
