--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--    <meta http-equiv="X-UA-Compatible" content="IE=edge">-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Passionate Software Engineer</title>
+    <title>kolacz.it</title>
 
     <meta name="description" content="Nauka programowania dla początkujacych i zaawansowanych.">
     <meta name="keywords" content="Java, kurs programowania, szkoła IT, nauka programowania">
@@ -104,7 +104,7 @@
                    
                    <div class="col-md-1 flex-center"><i class="fas fa-users-cog"></i></div>
                    <div class="col-md-11 flex-center">
-                        <p>Środowisko pracy idealnie symulujące pracę programisty - dołącz do zespołu i współtwórz aplikację do zarządzania finansami. Ponad 2 lata aktywnego rozwoju, setki commitów, dziesiątki deweloperów i produkcyjna jakość. U nas nie jesteś kursantem, jesteś członkiem zespołu. Chcesz poznać szczegóły? Zapraszamy na nasz profil na <a href="https://github.com/passionate-software-engineer/personal-finance-manager" target="_blank">Github</a>. Aplikację live możesz obejrzeć <a href="https://pfm-2.passionatesoftwareengineer.com" target="_blank">tutaj</a>.</p>
+                        <p>Środowisko pracy idealnie symulujące pracę programisty - dołącz do zespołu i współtwórz aplikację do zarządzania finansami. Ponad 2 lata aktywnego rozwoju, setki commitów, dziesiątki deweloperów i produkcyjna jakość. U nas nie jesteś kursantem, jesteś członkiem zespołu. Chcesz poznać szczegóły? Zapraszamy na nasz profil na <a href="https://github.com/passionate-software-engineer/personal-finance-manager" target="_blank">Github</a> <!--. Aplikację live możesz obejrzeć <a href="https://pfm-2.passionatesoftwareengineer.com" target="_blank">tutaj</a>-->.</p>
                    </div>
 
                    <div class="col-md-1 flex-center"><i class="fas fa-hand-holding-usd"></i></div>
@@ -361,11 +361,11 @@
                 Jak się z Wami skontaktować?
                 </h4>
 
-                <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"><span class="bold"> fanpage na Facebook'u</span></a> lub użyj ikonki Messenger'a w prawym dolnym rogu strony i na czacie porozmawiaj bezpośrednio z mentorem.</p>
+               <!-- <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"><span class="bold"> fanpage na Facebook'u</span></a> lub użyj ikonki Messenger'a w prawym dolnym rogu strony i na czacie porozmawiaj bezpośrednio z mentorem.</p> -->
 
-                <p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, <a href="tel:+48531840545"><span class="bold">zadzwonić</span></a> do nas lub napisać <a href="mailto:piotr@passionatesoftwareengineer.com"><span class="bold">maila</span></a>. W każdym przypadku odpisze Ci bezpośrednio mentor! </p>
+                <!--<p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, -->Możesz <a href="tel:+48531840545"><span class="bold">zadzwonić</span></a> do nas lub napisać <a href="mailto:piotr@kolacz.it"><span class="bold">maila</span></a>. W każdym przypadku odpisze Ci bezpośrednio mentor! </p>
 
-                <p>Masz wiele pytań? Od razu umów się na <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><span class="bold">spotkanie z mentorem</span></a>. Za pierwsze spotkanie nic nie płacisz. </p>
+               <!-- <p>Masz wiele pytań? Od razu umów się na <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><span class="bold">spotkanie z mentorem</span></a>. Za pierwsze spotkanie nic nie płacisz. </p> -->
 
             </div>
 
@@ -474,13 +474,13 @@
 
                             <p class="fa-a"><i class="far fa-envelope"></i>
 
-                            <a href="mailto:piotr@passionatesoftwareengineer.com" class="fa-a">piotr@passionatesoftwareengineer.com</a></p>
+                            <a href="mailto:piotr@kolacz.it" class="fa-a">piotr@kolacz.it</a></p>
 
-                            <p class="fa-a"><i class="fab fa-skype"></i>
+                           <!-- <p class="fa-a"><i class="fab fa-skype"></i>
 
                             <a target="_blank" href="https://join.skype.com/invite/kBAuLINHgkiA" class="fa-a">Skype - Passionate Software Engineer</a></p>
                             
-<!--                             <p class="fa-a"><i class="fab fa-slack"></i>
+                             <p class="fa-a"><i class="fab fa-slack"></i>
 
                             <a target="_blank" href="https://join.slack.com/t/passionate-engineer/shared_invite/enQtNTk2OTU5NTE0NjEwLTJiMWU1NTBjMmM5ZWMwODJjNWQ4YjFlMTY5NGM3MTJjNjFhMTQwM2Q3ODQ5MDUwYTkzMzc1YTIxODE4OWU5Zjc" class="fa-a">Slack - dołącz do naszej społeczności</a></p>
                              -->
@@ -605,7 +605,7 @@ znajdą Państwo w <a target="_blank" href="https://drive.google.com/open?id=1xu
 
 
     <footer>
-        <h3>Copyright &copy; 2017-2020 Passionate Software Engineer</h3>
+        <h3>Copyright &copy; 2017-2021 Kolacz.it</h3>
     </footer>
 
 
