--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
                 <p>Stawiamy na sprawdzonych mentorów. Wszyscy się znamy, napisaliśmy razem wiele projektów i wiemy czego od siebie oczekiwać.</p>
 
-                <p>Pracujemy bezpośrednio z kursantami, nie znajdziesz u nas biura, sekretarki, specjalisty od PR czy agresywnego marketingu. Wierzymy, że jeżeli ktoś chce zostać programistą to sam do nas trafi - jesteśmy aktywni w sieci i tworzymy darmowe treści, które pomagają Wam w procesie nauki. Napisz do nas a odpisze Ci programista a nie młodszy specjalista do spraw kontaktu z kursantami :)</p>
+                <p>Pracujemy bezpośrednio z kursantami, nie znajdziesz u nas biura, sekretarki, specjalisty od PR czy agresywnego marketingu. Wierzymy, że jeżeli ktoś chce zostać programistą to sam do nas trafi - jesteśmy aktywni w sieci i tworzymy darmowe treści, które pomagają Wam w procesie nauki. Napisz do nas a odpowie Ci programista a nie młodszy specjalista do spraw kontaktu z kursantami :)</p>
 
                 <p>Nie kupujesz kota w worku. Mentorów możesz wypróbować zanim zapłacisz, materiały udostępniamy publicznie a w przypadku gdy nie będziesz zadowolony z naszego wsparcia po prostu zwrócimy Ci pieniądze</p>
             </div>
@@ -363,7 +363,7 @@
 
                <!-- <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"><span class="bold"> fanpage na Facebook'u</span></a> lub użyj ikonki Messenger'a w prawym dolnym rogu strony i na czacie porozmawiaj bezpośrednio z mentorem.</p> -->
 
-                <!--<p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, -->Możesz <a href="tel:+48531840545"><span class="bold">zadzwonić</span></a> do nas lub napisać <a href="mailto:piotr@kolacz.it"><span class="bold">maila</span></a>. W każdym przypadku odpisze Ci bezpośrednio mentor! </p>
+                <!--<p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, -->Możesz <a href="tel:+48531840545"><span class="bold">zadzwonić</span></a> do nas lub napisać <a href="mailto:piotr@kolacz.it"><span class="bold">maila</span></a>. W każdym przypadku odpowie Ci bezpośrednio mentor! </p>
 
                <!-- <p>Masz wiele pytań? Od razu umów się na <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><span class="bold">spotkanie z mentorem</span></a>. Za pierwsze spotkanie nic nie płacisz. </p> -->
 
