--- a/index.html
+++ b/index.html
@@ -616,9 +616,11 @@ znajdą Państwo w <a target="_blank" href="https://drive.google.com/open?id=1xu
     <script src="js/scroll2.js"></script>
     <script type="text/javascript" id="cookieinfo" src="//cookieinfoscript.com/js/cookieinfo.min.js"
             data-message="Ta strona używa plików Cookie, korzystając ze strony zgadzasz się na ich użycie."
-<!--             data-moreinfo="https://drive.google.com/open?id=1_DrlYZVEt3eK__zO06lANOIQDijBVt88" 
-            data-linkmsg="Więcej informacji">-->
+            
+            >
             </script>
+<!--             data-moreinfo="https://drive.google.com/open?id=1_DrlYZVEt3eK__zO06lANOIQDijBVt88"  -->
+<!--             data-linkmsg="Więcej informacji" -->
     <!-- https://cookieinfoscript.com/ -->
 </body>
 </html>
