--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
                <!-- <p>Odwiedź nasz <a target="_blank" href="https://www.facebook.com/PassionateSoftwareEngineer"><span class="bold"> fanpage na Facebook'u</span></a> lub użyj ikonki Messenger'a w prawym dolnym rogu strony i na czacie porozmawiaj bezpośrednio z mentorem.</p> -->
 
-                <!--<p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, -->Możesz <a href="tel:+48531840545"><span class="bold">zadzwonić</span></a> do nas lub napisać <a href="mailto:piotr@kolacz.it"><span class="bold">maila</span></a>. W każdym przypadku odpowie Ci bezpośrednio mentor! </p>
+                <!--<p>Możesz też skorzystać z <a href="#form"><span class="bold">formularza kontaktowego</span></a> poniżej, Możesz <a href="tel:+48xxxxxxxxx"><span class="bold">zadzwonić</span></a> do nas lub--> Możesz do nas napisać <a href="mailto:piotr@kolacz.it"><span class="bold">maila</span></a>. W każdym przypadku odpowie Ci bezpośrednio mentor! </p>
 
                <!-- <p>Masz wiele pytań? Od razu umów się na <a target="_blank" href="https://calendly.com/kolacz-piotrek/konsultacje"><span class="bold">spotkanie z mentorem</span></a>. Za pierwsze spotkanie nic nie płacisz. </p> -->
 
@@ -469,8 +469,8 @@
 
 <!--                             <h4><span class="bold">Nauka programowania na godziny</span></h4> -->
 
-                            <p class="fa-a"><i class="fas fa-mobile-alt"></i>
-                            <a href="tel:+48531840545" class="fa-a phone" >+48 531-840-545</a></p>
+                           <!-- <p class="fa-a"><i class="fas fa-mobile-alt"></i>
+                            <a href="tel:+48xxxxxxxxx" class="fa-a phone" >+48 xxx-xxx-xxx</a></p> -->
 
                             <p class="fa-a"><i class="far fa-envelope"></i>
 
